Changelog for Sendex.

1.1.0-pl
==============
- Compatibility with MODX 2.3.
- UI improvements.

1.0.0-pl
==============
- Added multiremoving and multisending
- [#11]Added $_GET's subscribed, unsubscribed, confirmed
- [#1] Fixed urls of images

1.0.0-rc2
==============
- Various small fixes.

==============
- Fixed caching of template.

1.0.0-beta
==============
- Initial release.